docs(typos): fix some typos and broken links, update some text

--- a/packages/tools/docusaurus/docs/guides/create/index.mdx
+++ b/packages/tools/docusaurus/docs/guides/create/index.mdx
@@ -27,11 +27,11 @@ Just keep this page in mind as a great overview and intro point into **kickstart
 
 The main steps involved go as follows:
 
-1. [Start your Design System](./start.mdx)
+1. [Start your **Design System**](./start.mdx)
 2. [Design Application](./design.mdx)
-3. [Configure Storybook](./storybook.mdx)
+3. [Configure **Storybook**](./storybook.mdx)
 4. [Add Components](./components.mdx)
-5. [Publish your Design System](./publish.mdx)
+5. [Publish your **Design System**](./publish.mdx)
 
 The resulting Design System will obviously not be finished by the end of this guide, but you'll have everything set up to start on the real work. We'll add links along the way when it makes sense, calling out concepts at play, or processes to use, to find and refine your own personalized worfklow with **kickstartDS**, and ultimately your own Design System (stuff like choosing an initial component set for your Design System).
 
