--- a/packages/tools/docusaurus/docs/guides/examples/components/button.mdx
+++ b/packages/tools/docusaurus/docs/guides/examples/components/button.mdx
@@ -1082,7 +1082,7 @@ This concludes the creation of our new `Button` component. It's now ready to be 
 
 ## Use of **Storybook**
 
-If you're using **Storybook**, you can follow this part of the example to get all the [integration goodness possible with **kickstartDS**](../integrations/storybook/index.mdx)!
+If you're using **Storybook**, you can follow this part of the example to get all the [integration goodness possible with **kickstartDS**](../../../integration/storybook/index.mdx)!
 
 <Admonition type="tip" title="Storybook setup">
   This guide assumes you're using a set up like described in our [Create your
