docs(foundations): update some sections

--- a/packages/tools/docusaurus/docs/foundations/layout/bedrock.mdx
+++ b/packages/tools/docusaurus/docs/foundations/layout/bedrock.mdx
@@ -20,9 +20,9 @@ import {
   Column,
 } from '@bedrock-layout/primitives';
 
-# Bedrock
+# Bedrock Layout Primitives
 
-We use Bedrock as our library of choice when it comes to layouting:
+We use [Bedrock Layout Primitives](https://www.bedrock-layout.dev/) as our library of choice when it comes to layouting:
 
 <Quote
   image={require('./assets/bedrock-logo.png').default}
