--- a/packages/tools/docusaurus/docs/foundations/layout/index.mdx
+++ b/packages/tools/docusaurus/docs/foundations/layout/index.mdx
@@ -14,7 +14,7 @@ Layouting helps give context to your components, that were developed in isolatio
     <TeaserBox
       link={{
         size: 'small',
-        href: 'docs/foundations/layout/sections',
+        href: './sections/',
         label: 'Go to Sections',
         variant: 'clear',
         iconAnimation: true,
@@ -28,7 +28,7 @@ Layouting helps give context to your components, that were developed in isolatio
     <TeaserBox
       link={{
         size: 'small',
-        href: 'docs/foundations/layout/bedrock',
+        href: './bedrock/',
         label: 'Explore Bedrock',
         variant: 'clear',
         iconAnimation: true,
