--- a/packages/tools/docusaurus/docs/guides/create/start.mdx
+++ b/packages/tools/docusaurus/docs/guides/create/start.mdx
@@ -105,6 +105,13 @@ Enter the prompted information, and you'll end up with a `package.json` describi
 With this you can continue with `Add to existing project`. From here on out the steps will be the same.<br/>
 You'll just find that, in comparison to having an existing project, you'll probably not find any of the steps to be optional!
 
+<Admonition type="tip" title="Code samples and paths">
+  Notice the small filename tab at the top of every code sample featured in these very docs? That tab always includes the full path of the file shown. This can be helpful when unsure on where a particular file should be added inside your project.
+
+If there's only a filename, and not a path, in there, it means the file lives at the projects root... where your `package.json`, `.git` folder, etc reside!
+
+</Admonition>
+
 ## Add to existing project
 
 In your terminal, switch to the project that you want to add **kickstartDS** to first. We'll be adding some dependencies, some glue code and configuration to hook everything up.
