feat(storybook): first draft of Storybook 7 upgrade

--- a/packages/components/core/source/design-tokens/icons.mdx
+++ b/packages/components/core/source/design-tokens/icons.mdx
@@ -1,5 +1,5 @@
-import { Meta, Story, Canvas } from '@storybook/addon-docs';
-import { DesignTokenDocBlock } from 'storybook-design-token/dist/doc-blocks';
+import { Meta } from '@storybook/blocks';
+import { DesignTokenDocBlock } from 'storybook-design-token';
 
 <Meta title="Design Tokens/Icons" />
 
