--- a/packages/tools/docusaurus/docs/guides/create/components.mdx
+++ b/packages/tools/docusaurus/docs/guides/create/components.mdx
@@ -422,13 +422,13 @@ This is how your `package.json` should look like currently.
   "description": "Design System for all @MY needs",
   "main": "dist/index.js",
   "scripts": {
-    "build-storybook": "build-storybook",
+    "build-storybook": "storybook build",
     "build-tokens": "kickstartDS tokens compile",
     "dereference-schemas": "kickstartDS schema dereference --schema-domain schema.mydesignsystem.com",
     "generate-props": "kickstartDS schema types --schema-domain schema.mydesignsystem.com",
     "init-tokens": "kickstartDS tokens init",
     "sass-manager": "sass --load-path=node_modules .storybook/manager.scss static/manager.css",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "storybook dev -p 6006",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch:sass-manager": "yarn sass-manager --watch"
   },
@@ -477,14 +477,14 @@ We add a command aggregating schema dereferencing and props generation for us in
   "description": "Design System for all @MY needs",
   "main": "dist/index.js",
   "scripts": {
-    "build-storybook": "build-storybook",
+    "build-storybook": "storybook build",
     "build-tokens": "kickstartDS tokens compile",
     "dereference-schemas": "kickstartDS schema dereference --schema-domain schema.mydesignsystem.com",
     "generate-props": "kickstartDS schema types --schema-domain schema.mydesignsystem.com",
     "init-tokens": "kickstartDS tokens init",
     "sass-manager": "sass --load-path=node_modules .storybook/manager.scss static/manager.css",
     "schema": "run-p schema:*",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "storybook dev -p 6006",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch:sass-manager": "yarn sass-manager --watch"
   },
@@ -537,14 +537,14 @@ We now move all schema related tasks to using that `schema` prefix.
 "chokidar": "^3.5.3",esign System for all @MY needs",
   "main": "dist/index.js",
   "scripts": {
-    "build-storybook": "build-storybook",
+    "build-storybook": "storybook build",
     "build-tokens": "kickstartDS tokens compile",
     "init-tokens": "kickstartDS tokens init",
     "sass-manager": "sass --load-path=node_modules .storybook/manager.scss static/manager.css",
     "schema": "run-p schema:*",
     "schema:dereference-schemas": "kickstartDS schema dereference --schema-domain schema.mydesignsystem.com",
     "schema:generate-props": "kickstartDS schema types --schema-domain schema.mydesignsystem.com",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "storybook dev -p 6006",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch:sass-manager": "yarn sass-manager --watch"
   },
@@ -593,14 +593,14 @@ Make sure everything is compiled, before building **Storybook**.
   "description": "Design System for all @MY needs",
   "main": "dist/index.js",
   "scripts": {
-    "build-storybook": "yarn build-tokens && run-p sass-manager schema && build-storybook",
+    "build-storybook": "yarn build-tokens && run-p sass-manager schema && storybook build",
     "build-tokens": "kickstartDS tokens compile",
     "init-tokens": "kickstartDS tokens init",
     "sass-manager": "sass --load-path=node_modules .storybook/manager.scss static/manager.css",
     "schema": "run-p schema:*",
     "schema:dereference-schemas": "kickstartDS schema dereference --schema-domain schema.mydesignsystem.com",
     "schema:generate-props": "kickstartDS schema types --schema-domain schema.mydesignsystem.com",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "storybook dev -p 6006",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch:sass-manager": "yarn sass-manager --watch"
   },
@@ -652,14 +652,14 @@ We now add `watch` tasks for `schema` and `dictionary`, using `chokidar`.
   "description": "Design System for all @MY needs",
   "main": "dist/index.js",
   "scripts": {
-    "build-storybook": "yarn build-tokens && run-p sass-manager schema && build-storybook",
+    "build-storybook": "yarn build-tokens && run-p sass-manager schema && storybook build",
     "build-tokens": "kickstartDS tokens compile",
     "init-tokens": "kickstartDS tokens init",
     "sass-manager": "sass --load-path=node_modules .storybook/manager.scss static/manager.css",
     "schema": "run-p schema:*",
     "schema:dereference-schemas": "kickstartDS schema dereference --schema-domain schema.mydesignsystem.com",
     "schema:generate-props": "kickstartDS schema types --schema-domain schema.mydesignsystem.com",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "storybook dev -p 6006",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch:sass-manager": "yarn sass-manager --watch",
     "watch:schema": "yarn schema && chokidar \"src/**/*.schema.json\" -c \"yarn schema\"",
@@ -710,7 +710,7 @@ We can use that in development, to start everything with hot reload because of t
   "description": "Design System for all @MY needs",
   "main": "dist/index.js",
   "scripts": {
-    "build-storybook": "yarn build-tokens && run-p sass-manager schema && build-storybook",
+    "build-storybook": "yarn build-tokens && run-p sass-manager schema && storybook build",
     "build-tokens": "kickstartDS tokens compile",
     "init-tokens": "kickstartDS tokens init",
     "sass-manager": "sass --load-path=node_modules .storybook/manager.scss static/manager.css",
@@ -718,7 +718,7 @@ We can use that in development, to start everything with hot reload because of t
     "schema:dereference-schemas": "kickstartDS schema dereference --schema-domain schema.mydesignsystem.com",
     "schema:generate-props": "kickstartDS schema types --schema-domain schema.mydesignsystem.com",
     "start": "run-p watch:* storybook",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "storybook dev -p 6006",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch:sass-manager": "yarn sass-manager --watch",
     "watch:schema": "yarn schema && chokidar \"src/**/*.schema.json\" -c \"yarn schema\"",
@@ -769,7 +769,7 @@ Your `package.json` should look like this now!
   "description": "Design System for all @MY needs",
   "main": "dist/index.js",
   "scripts": {
-    "build-storybook": "yarn build-tokens && run-p sass-manager schema && build-storybook",
+    "build-storybook": "yarn build-tokens && run-p sass-manager schema && storybook build",
     "build-tokens": "kickstartDS tokens compile",
     "init-tokens": "kickstartDS tokens init",
     "sass-manager": "sass --load-path=node_modules .storybook/manager.scss static/manager.css",
@@ -777,7 +777,7 @@ Your `package.json` should look like this now!
     "schema:dereference-schemas": "kickstartDS schema dereference --schema-domain schema.mydesignsystem.com",
     "schema:generate-props": "kickstartDS schema types --schema-domain schema.mydesignsystem.com",
     "start": "run-p watch:* storybook",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "storybook dev -p 6006",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch:sass-manager": "yarn sass-manager --watch",
     "watch:schema": "yarn schema && chokidar \"src/**/*.schema.json\" -c \"yarn schema\"",
