--- a/packages/tools/docusaurus/docs/guides/use-our-starter.mdx
+++ b/packages/tools/docusaurus/docs/guides/use-our-starter.mdx
@@ -543,7 +543,7 @@ Short descriptions for all of the scripts entries in `package.json`:
 
 | Script                       | Link                                                                            | Description                                                                                                                                           |
 | ---------------------------- | ------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------- |
-| `build-storybook`            | [Features > **Storybook** integration](#storybook-integration)                  | Compile **Design Token** set first, run `sass`, `sass-manager` and `schema` in parallel, before finally starting the default `build-storybook` script |
+| `build-storybook`            | [Features > **Storybook** integration](#storybook-integration)                  | Compile **Design Token** set first, run `sass`, `sass-manager` and `schema` in parallel, before finally starting the default `storybook build` script |
 | `build-tokens`               | [Features > **Design Token** integration](#design-token-integration)            | Compile **Design Token** set according to `sd.config.cjs`                                                                                             |
 | `chromatic`                  | [Features > Release handling](#release-handling)                                | Run **Visual Regression Tests** with **Chromatic**                                                                                                    |
 | `dist:components`            | [Features > Bundling > Bundling for **React** usage](#bundling-for-react-usage) | Build all the components for **React** usage                                                                                                          |
@@ -565,7 +565,7 @@ Short descriptions for all of the scripts entries in `package.json`:
 | `schema:dereference-schemas` | [Features > **Storybook** integration](#storybook-integration)                  | Dereference **JSON Schema**, to inline all references (`$ref`) to make consumption (e.g. in **Storybook Controls**) easier                            |
 | `schema:generate-props`      | [Features > **Storybook** integration](#storybook-integration)                  | Generate **TypeScript** types based on your component API                                                                                             |
 | `start`                      | [Getting started (in 5 minutes)](#getting-started-in-5-minutes)                 | Start everything in watch mode, and then start **Storybook** in watch mode, too                                                                       |
-| `storybook`                  | [Getting started (in 5 minutes)](#getting-started-in-5-minutes)                 | Alias for default **Storybook** start script `start-storybook`                                                                                        |
+| `storybook`                  | [Getting started (in 5 minutes)](#getting-started-in-5-minutes)                 | Alias for default **Storybook** start script `storybook dev`                                                                                          |
 | `token`                      | [Features > **Design Token** integration](#design-token-integration)            | Extracts **Component Token** from component **CSS** / **SCSS**, so they can be displayed in our addon                                                 |
 | `watch:sass`                 | [Features > **Storybook** integration](#storybook-integration)                  | Compile **CSS** for use in **Storybook** in watch mode                                                                                                |
 | `watch:sass-manager`         | [Features > **Storybook** integration](#storybook-integration)                  | Compile **CSS** for **Storybook**s manager in watch mode                                                                                              |
