--- a/packages/tools/docusaurus/docs/concepts/index.mdx
+++ b/packages/tools/docusaurus/docs/concepts/index.mdx
@@ -7,4 +7,4 @@ import { Columns } from '@bedrock-layout/primitives';
 
 # Concepts
 
-We'll add content to this section soon, in the meantime: [let us know what you'd like to read and learn about](../feedback/index.mdx)!
+We'll add content to this section soon, in the meantime: [let us know what you'd like to read and learn about](../feedback/index.md)!
